--- a/faq.html
+++ b/faq.html
@@ -30,6 +30,7 @@
    <!-- ==== / css dependencies end ==== -->
    <!-- main css -->
    <link rel="stylesheet" href="assets/css/main.min.css">
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="sigmacode.agency" data-description="Support me on Buy me a coffee!" data-message="Hello! You Can Support Us If U Want." data-color="#ff7425" data-position="left" data-x_margin="18" data-y_margin="18"></script>
 </head>
 
 <body>
