--- a/contact-us.html
+++ b/contact-us.html
@@ -352,6 +352,16 @@
          </svg>
       </button>
       <!-- ==== / scroll to top end ==== -->
+	   <!-- video modal -->
+      <div class="vid-m">
+         <div class="vid-c">
+            <button aria-label="close video popup" class="close-v">
+               <i class="fa-light fa-xmark-large"></i>
+            </button>
+			<img src="assets/images/popup-video.gif" alt="Call Center">
+            <h5>Hello</h5>
+         </div>
+      </div>
    </div>
    <!-- ==== js dependencies start ==== -->
    <!-- jquery -->
