--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <!-- ==== main start ==== -->
             <main>
                <!-- ==== banner start ==== -->
-               <section class="banner-two" data-background="assets/images/banner/banner-two-bg.png">
+               <section class="banner-two" data-background="assets/images/banner/banner-two-bg.webp">
                   <div class="container">
                      <div class="row">
                         <div class="col-12">
@@ -505,7 +505,7 @@
                         <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design">
                            <div class="portfolio__single portfolio__single-active topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/1.png" alt="Image">
+                                 <img src="assets/images/portfolio/1.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -520,7 +520,7 @@
                         <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/2.png" alt="Image">
+                                 <img src="assets/images/portfolio/2.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -535,7 +535,7 @@
                         <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/3.png" alt="Image">
+                                 <img src="assets/images/portfolio/3.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -550,7 +550,7 @@
                         <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/4.png" alt="Image">
+                                 <img src="assets/images/portfolio/4.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -565,7 +565,7 @@
                         <div class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/5.png" alt="Image">
+                                 <img src="assets/images/portfolio/5.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -581,7 +581,7 @@
                            class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/6.png" alt="Image">
+                                 <img src="assets/images/portfolio/6.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -597,7 +597,7 @@
                            class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main design">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/7.png" alt="Image">
+                                 <img src="assets/images/portfolio/7.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -613,7 +613,7 @@
                            class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main designs">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/8.png" alt="Image">
+                                 <img src="assets/images/portfolio/8.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -629,7 +629,7 @@
                            class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main designs">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/9.png" alt="Image">
+                                 <img src="assets/images/portfolio/9.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -645,7 +645,7 @@
                            class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main designs">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/10.png" alt="Image">
+                                 <img src="assets/images/portfolio/10.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -661,7 +661,7 @@
                            class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main designs">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/11.png" alt="Image">
+                                 <img src="assets/images/portfolio/11.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -677,7 +677,7 @@
                            class="col-12 col-md-6 col-xl-4 filter-item-space grid-item-main designs">
                            <div class="portfolio__single topy-tilt fade-top">
                               <a href="#">
-                                 <img src="assets/images/portfolio/12.png" alt="Image">
+                                 <img src="assets/images/portfolio/12.webp" alt="Image">
                               </a>
                               <div class="portfolio__single-content">
                                  <a href="#">
@@ -913,16 +913,7 @@
          </svg>
       </button>
       <!-- ==== / scroll to top end ==== -->
-      <!-- video modal -->
-      <div class="vid-m">
-         <div class="vid-c">
-            <button aria-label="close video popup" class="close-v">
-               <i class="fa-light fa-xmark-large"></i>
-            </button>
-			<img src="assets/images/popup-video.gif" alt="Call Center">
-            <h5>Hello</h5>
-         </div>
-      </div>
+     
    </div>
    <!-- ==== js dependencies start ==== -->
    <!-- jquery -->
