--- a/about-us.html
+++ b/about-us.html
@@ -155,7 +155,7 @@
                <!-- ==== / banner end ==== -->
                <!-- ==== video modal start ==== -->
                <div class="video-modal">
-                  <img src="assets/images/modal-bg.png" alt="Image" class="modal-bg">
+                  <img src="assets/images/modal-bg.webp" alt="Image" class="modal-bg">
                   <a class="video-frame video-btn" href="#" target="_blank">
                      <img src="assets/images/video-frame-two.png" alt="Image">
                      <i class="fa-sharp fa-solid fa-play"></i>
