--- a/index.html
+++ b/index.html
@@ -351,6 +351,32 @@
                                     </div>
                                  </div>
                               </div>
+							   <div class="service-t-single-wrapper">
+                                 <div class="service-t__slider-single">
+                                    <div class="intro">
+                                       <span class="sub-title">
+                                          06
+                                          <i class="fa-solid fa-arrow-right"></i>
+                                       </span>
+                                       <h4>
+                                          <a href="#">Other</a>
+                                       </h4>
+                                    </div>
+                                    <ul>
+                                       <li>Influencer Marketing</li>
+                                       <li>CRM Management</li>
+                                       <li>Youtube Services</li>
+                                       <li>Lead Generation</li>
+                                    
+                                    </ul>
+                                    <div class="cta">
+                                       <a href="#">
+                                          <i class="icon-arrow-top-right"></i>
+                                          <span>service details</span>
+                                       </a>
+                                    </div>
+                                 </div>
+                              </div>
                               
                            </div>
                         </div>
