--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="navbar__options">
                            <div class="navbar__mobile-options d-none d-sm-flex">
-                              <a href="contact-us.html" class="btn btn--secondary">Let's Talk</a>
+                               <a href="./mindmap/index.html" class="btn btn--secondary">Let's Learn</a>
                            </div>
                            <button class="open-mobile-menu d-flex d-xl-none" aria-label="toggle mobile menu">
                               <i class="fa-light fa-bars-staggered"></i>
@@ -260,6 +260,9 @@
                               </li>
                               <li>
                                  <a href="contact-us.html">Contact</a>
+                              </li>
+							  <li>
+                                 <a href="./mindmap/index.html" target="_blank">Mind Map</a>
                               </li>
                            </ul>
                         </div>
