--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -1149,7 +1149,7 @@
 		  <tr>
            <th scope="row"></th>
             <td>Free Platforms</td>
-            <td><b>Test your English</b> <a href="https://www.cambridgeenglish.org/test-your-english/" target="_blank">Click Here</a></br><b>Practicing English</b> <a href="https://www.free4talk.com" target="_blank">Click Here</a></br>Memrise <a href="https://www.memrise.com/" target="_blank">Click Here</a></br>Loecsen <a href="https://www.loecsen.com/en#P1" target="_blank">Click Here</a></td>
+            <td><b>Test your English</b> <a href="https://www.cambridgeenglish.org/test-your-english/" target="_blank">Click Here</a></br><b>Practicing English</b> <a href="https://www.free4talk.com" target="_blank">Click Here</a></br>Memrise <a href="https://www.memrise.com/" target="_blank">Click Here</a></br>Loecsen <a href="https://www.loecsen.com/en#P1" target="_blank">Click Here</a></br>Rong Chang <a href="https://www.rong-chang.com" target="_blank">Click Here</a></td>
             <td><b>Spanish Level Test</b> <a href="https://www.esl-languages.com/en/online-language-tests/spanish-test" target="_blank">Click Here</a></br>Memrise <a href="https://www.memrise.com/" target="_blank">Click Here</a></br>Loecsen <a href="https://www.loecsen.com/en#P1" target="_blank">Click Here</a></br>Studyspanish <a href="https://studyspanish.com" target="_blank">Click Here</a></td>
           </tr>
           <tr>
@@ -2951,6 +2951,7 @@ Includes basic shell scripting as part of the certification.
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Learn With Certificate &#127891;&#127873;</a>
           <ul class="dropdown-menu text-small">
 		   <li><a class="dropdown-item" href="https://skillshop.docebosaas.com/pages/16/skillshop-home-page" title="Google Ads....." target="_blank">Google</a></li>
+		   <li><a class="dropdown-item" href="https://grow.google/intl/mena/courses-and-tools/" title="cybersecurity........." target="_blank">Google II</a></li>
 		   <li><a class="dropdown-item" href="https://certifications.facebookblueprint.com/student/catalog" title="Facebook Ads....." target="_blank">Meta</a></li>
 		  <li><a class="dropdown-item" href="https://virtualcoursesnow.com/courses/" title="Personal Branding, Copywriting, Email Marketing, Digital Marketing, Sales, Virtual Assistant, Business, Android Flutter" target="_blank">VCN</a></li>
             <li><a class="dropdown-item" href="https://www.coursat.org/index.php" target="_blank" title="Programming, Network, Data Base, Information Security, Os, Soft Skills ...">Coursat</a></li>
