--- a/index.html
+++ b/index.html
@@ -413,26 +413,26 @@
                               </span>
                               <h2 class="title title-anim">
                                  Our 
-                                 <span>Passion</span>
+                                 <span>Journey Together</span>
                               </h2>
                               <div class="paragraph">
-                                 <p>We love creating digital solutions that help businesses succeed online. Our passion drives us to innovate and deliver top-notch websites, engaging graphics, and effective digital marketing strategies, ensuring our clients thrive in the digital world.</p>
+                                 <p>From forging strategic partnerships to accelerating growth and leading innovation, SIGMA Code drives your success with tailored digital strategies and cutting-edge solutions.</p>
                               </div>
                               <div class="award__content-meta">
                                  <div class="single">
                                     <h4>2022</h4>
-                                    <h4>S T A R T</h4>
-                                    <p>Founded Sigma Code, aiming for excellence in digital services.</p>
+                                    <h4>Strategic Partnerships</h4>
+                                    <p>Building Success Together</p>
                                  </div>
                                  <div class="single">
                                     <h4>2023</h4>
-                                    <h4>P A S S I O N</h4>
-                                    <p>Expanded services, focusing on innovative web and graphic design.</p>
+                                    <h4>Accelerated Growth</h4>
+                                    <p>Expanding Reach, Driving Results</p>
                                  </div>
                                  <div class="single">
                                     <h4>2024</h4>
-                                    <h4>G O A L</h4>
-                                    <p>Continued growth, delivering top-tier digital solutions and winning accolades</p>
+                                    <h4>Leading Innovation</h4>
+                                    <p>Shaping Future Success</p>
                                  </div>
                               </div>
                            </div>
