--- a/404.html
+++ b/404.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LQT3GZJB0G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LQT3GZJB0G');
+</script>
    <!-- required meta -->
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,9 +20,9 @@
    <!-- #title -->
   <title>S I G M A - ERROR 404</title>
    <!-- #keywords -->
-   <meta name="keywords" content="creative, agency, portfolio">
+   <meta name="keywords" content="Digital Agency, smm, social media management, creation websites, graphic design, digital marketing, digital products, video editing, architecture services...">
    <!-- #description -->
-   <meta name="description" content="Creative Agency Portfolio HTML5 Template">
+   <meta name="description" content="Digital Agency Help U to Growth Online">
    <!-- ==== css dependencies start ==== -->
    <!-- bootstrap five css -->
    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
