--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -1,5 +1,14 @@
 <html lang="en">
     <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LQT3GZJB0G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LQT3GZJB0G');
+</script>
         <meta charset="utf-8">
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 	<title>S I G M A - Mind Map</title>
