--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -54,7 +54,7 @@
 	
     <div class="alert alert-info" role="alert">
         <p>This Mind Map <i class="fa fa-map-marker"></i> To Help U To Learn <i class="fa fa-graduation-cap"></i> Without Distraction <i class="fa fa-line-chart"></i>. Click <i class="fa fa-file-text-o"></i> to view More Info <i class="fa fa-comments"></i>. Please Click In <span class="badge badge-success">&nbsp;&nbsp;</span> <i class="fa fa-mouse-pointer"></i> Colors Below If U Need More Mind Maps <i class="fa fa-trophy"></i> : </p>
-        <p><small class="font-weight-light">Marouan Anouar <span class="badge text-bg-info">Owner</small> <i class="fi fi-MA" title="Morocco"></i> <i class="fi fi-PS" title="Free Palestine"></i></p>
+        <p><small style="font-family: 'Vampire Wars';">Marouan Anouar <span class="badge text-bg-info" style="font-family: 'font-weight-light';">Owner</small> <i class="fi fi-MA" title="Morocco"></i> <i class="fi fi-PS" title="Free Palestine"></i></p>
 		<p>
 		
           <a type="button" data-bs-toggle="modal" data-bs-target="#hacker"><span class="badge badge-Secondary">&nbsp;&nbsp;</span></a> - Red Team <i class="fa fa-user-secret"></i>
@@ -65,7 +65,7 @@
           <a type="button" data-bs-toggle="modal" data-bs-target="#soft"><span class="badge badge-warning">&nbsp;&nbsp;</span></a> - Soft Skills <i class="fa fa-pie-chart"></i>
           <a type="button" data-bs-toggle="modal" data-bs-target="#languages"><span class="badge badge-danger">&nbsp;&nbsp;</span></a> - Languages ES,EN <i class="fa fa-commenting"></i>
         </p>
-        <p><small class="font-weight-light">Generated 06&#x2F;25&#x2F;2024, 11:52:28 AM <i class="fa fa-cog fa-spin fa-1x fa-fw"></i></small></p>
+        <p><small style="font-family: 'Kuman';">Generated 06&#x2F;25&#x2F;2024, 11:52:28 AM <i class="fa fa-cog fa-spin fa-1x fa-fw"></i></small></p>
     </div>
 	
 
@@ -3118,7 +3118,7 @@ Includes basic shell scripting as part of the certification.
 	    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
      <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://sigmacodeagency.github.io/store" target="_blank">S I G M A Code</a>
+    <a class="navbar-brand" href="https://sigmacodeagency.github.io/store" target="_blank" style="font-family: 'Vampire Wars';">S I G M A Code</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -3198,7 +3198,7 @@ Includes basic shell scripting as part of the certification.
             <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiQdby6E6wkxpX1D_f2g3B55Z_f-HBKtCbFC3txAeHAwxix8XCB8FjXvhJZ38HFmP27RMAiqkyRxt4-jNbAvH-5jiEkdyjyEbO2s6zq-4L6cR-DTFwao_hayobVsFtSrdlndXiOv5Q87u5Ir4U1PbwPp_LWcDvINoDD-dlB-SnSpgl_cRht8yzD6P4CiQ/s128/Untitled%20design%20(2).jpg" alt="mdo" width="32" height="32" class="rounded-circle">
           </a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <li><h6 class="dropdown-header">Social Media Platform</h6></li>
+              <li><h6 class="dropdown-header" style="font-family: 'Vampire Wars';">Social Media Platform</h6></li>
 			  <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="https://www.instagram.com/marouan_anouar" target="_blank">Instagram</a></li>
               <li><a class="dropdown-item" href="https://www.linkedin.com/in/marouananouar/" target="_blank">Linkedin</a></li>
