--- a/about-us.html
+++ b/about-us.html
@@ -299,7 +299,7 @@
                      <div class="blog-two__slider-single topy-tilt">
                         <div class="blog__single-thumb">
                            <a href="#">
-                              <img src="https://media.licdn.com/dms/image/sync/D4E27AQHMqBw-ZK0lbA/articleshare-shrink_800/0/1712602873447?e=1721246400&v=beta&t=WHz-axQr4rJrOgWtyP0-yEN3WytZW8UbB6y2A8Jnyv4" alt="Image">
+                              <img src="assets/images/cert/06.jpg" alt="Image">
                            </a>
                         </div>
                         <div class="blog__single-content">
@@ -318,7 +318,7 @@
                      <div class="blog-two__slider-single topy-tilt">
                         <div class="blog__single-thumb">
                            <a href="#">
-                              <img src="https://media.licdn.com/dms/image/sync/D4E27AQGGAIcReMXseg/articleshare-shrink_800/0/1712602873403?e=1721246400&v=beta&t=HvIw_24UPush1rHoz91tLtEy1TjWES0n6tUjxBq7N9o" alt="Image">
+                              <img src="assets/images/cert/05.jpg" alt="Image">
                            </a>
                         </div>
                         <div class="blog__single-content">
@@ -337,7 +337,7 @@
                      <div class="blog-two__slider-single topy-tilt">
                         <div class="blog__single-thumb">
                            <a href="#">
-                              <img src="https://media.licdn.com/dms/image/sync/D4E27AQE0Gb68TEZN9Q/articleshare-shrink_800/0/1712602872741?e=1721246400&v=beta&t=1vbG9Hk3h0rHzm0Yxj5d53DCo9YM1Qq28BDOA0Gm6lw" alt="Image">
+                              <img src="assets/images/cert/07.jpg" alt="Image">
                            </a>
                         </div>
                         <div class="blog__single-content">
@@ -356,7 +356,7 @@
                      <div class="blog-two__slider-single topy-tilt">
                         <div class="blog__single-thumb">
                            <a href="#">
-                              <img src="https://media.licdn.com/dms/image/sync/D4E27AQFx78cI0HdcvA/articleshare-shrink_800/0/1712602873157?e=1721246400&v=beta&t=sD6gHSygByVGp8Bl49mfb7MiwZUTgP9L7Z754RQz9dY" alt="Image">
+                              <img src="assets/images/cert/03.jpg" alt="Image">
                            </a>
                         </div>
                         <div class="blog__single-content">
@@ -375,7 +375,7 @@
                      <div class="blog-two__slider-single topy-tilt">
                         <div class="blog__single-thumb">
                            <a href="#">
-                              <img src="https://media.licdn.com/dms/image/sync/D4E27AQF1ee8xOdkYNw/articleshare-shrink_800/0/1712602872758?e=1721246400&v=beta&t=63BNMrxZt8CyfQ6r387onxAoSXsxKmHvONn7iv47c04" alt="Image">
+                              <img src="assets/images/cert/04.jpg" alt="Image">
                            </a>
                         </div>
                         <div class="blog__single-content">
@@ -394,7 +394,7 @@
                      <div class="blog-two__slider-single topy-tilt">
                         <div class="blog__single-thumb">
                            <a href="#">
-                              <img src="https://media.licdn.com/dms/image/sync/D4E2DAQGc1YaLJjiVag/profile-treasury-image-shrink_800_800/0/1700754824292?e=1721246400&v=beta&t=P6JanQtiuEEvWyMGuKCogRz3FjYornWmXeY9bodVrPs" alt="Image">
+                              <img src="assets/images/cert/08.jpg" alt="Image">
                            </a>
                         </div>
                         <div class="blog__single-content">
@@ -413,7 +413,7 @@
 					  <div class="blog-two__slider-single topy-tilt">
                         <div class="blog__single-thumb">
                            <a href="#">
-                              <img src="https://media.licdn.com/dms/image/sync/D4E27AQErkkzwrtsiNA/articleshare-shrink_800/0/1712602872511?e=1721246400&v=beta&t=s1Htdg6KVHeFbrapB3GGXtv2KXA0mMqeQzIm4wtTCIY" alt="Image">
+                              <img src="assets/images/cert/09.jpg" alt="Image">
                            </a>
                         </div>
                         <div class="blog__single-content">
@@ -432,7 +432,7 @@
 					 <div class="blog-two__slider-single topy-tilt">
                         <div class="blog__single-thumb">
                            <a href="#">
-                              <img src="https://media.licdn.com/dms/image/sync/D4E2DAQGLifhZI0CYMQ/profile-treasury-image-shrink_800_800/0/1700754534543?e=1721246400&v=beta&t=DTUVt7LuTRz224yy7fL70CQXype12rw361igDrjnzGI" alt="Image">
+                              <img src="assets/images/cert/10.jpg" alt="Image">
                            </a>
                         </div>
                         <div class="blog__single-content">
@@ -451,7 +451,7 @@
 					  <div class="blog-two__slider-single topy-tilt">
                         <div class="blog__single-thumb">
                            <a href="#">
-                              <img src="https://media.licdn.com/dms/image/sync/D4E27AQEu5H0AW43B3A/articleshare-shrink_800/0/1712602872629?e=1721246400&v=beta&t=e-rzLV-CBO5Xa4wOckWWaOX8TLaVRSR3_6tOH9St6RY" alt="Image">
+                              <img src="assets/images/cert/02.jpg" alt="Image">
                            </a>
                         </div>
                         <div class="blog__single-content">
@@ -464,6 +464,25 @@
                                  <i class="fa-solid fa-arrow-right"></i>
                               </a>
                               <p>Jun, 2023</p>
+                           </div>
+                        </div>
+                     </div>
+					  <div class="blog-two__slider-single topy-tilt">
+                        <div class="blog__single-thumb">
+                           <a href="#">
+                              <img src="assets/images/cert/01.jpg" alt="Image">
+                           </a>
+                        </div>
+                        <div class="blog__single-content">
+                           <h4>
+                              <a href="#">Personal Branding</a>
+                           </h4>
+                           <div class="blog__single-meta">
+                              <a href="#" class="sub-title">
+                                 creative
+                                 <i class="fa-solid fa-arrow-right"></i>
+                              </a>
+                              <p>Oct, 2023</p>
                            </div>
                         </div>
                      </div>
