--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -125,6 +125,7 @@
       </div>
 	  <div>
        <div class="dropdown-header"><b>Builder Site AI</b></div>
+	   <a class="dropdown-item" href="https://app.xpage.ai/templates" target="_blank">Xpage</a>
        <a class="dropdown-item" href="https://nicepage.com" target="_blank">Nicepage</a>
 	   <a class="dropdown-item" href="https://www.relume.io" target="_blank">Relume</a>
 	   <a class="dropdown-item" href="https://screenshottocode.com" target="_blank">ScreenShotToCode</a>
@@ -222,6 +223,7 @@
 	 <a class="dropdown-item" href="https://bit.ly/blackhacker" target="_blank">ChatGPT <span class="badge text-bg-danger">White Hat!</a>
     <a class="dropdown-item" href="https://shorturl.at/lKZhT" target="_blank">Canva Pro <span class="badge text-bg-primary">Free</a>
 	<a class="dropdown-item" href="https://www.proinvitelinks.com/" target="_blank">Canva Pro <span class="badge text-bg-success">Free</a>
+	<a class="dropdown-item" href="https://difficult-crystal-c93.notion.site/Notion-8967c3c45b3642ffa8220ce81d4473f4" target="_blank">Notion Template <span class="badge text-bg-success">Free</a>
 	</div>
 	</div>
    </li>
@@ -3341,7 +3343,8 @@ Includes basic shell scripting as part of the certification.
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Free Courses Links &#127874;</a>
           <ul class="dropdown-menu text-small">
 <li><a class="dropdown-item" href="https://lmofidclub.com/courses" target="_blank" title="E-Commerce, Fb Ads, Google Ads .....">Lmofidclub</a></li>   
-<li><a class="dropdown-item" href="https://www.w3schools.com" target="_blank" title="HTML, CSS, JAVASCRIPT, SQL,  JAVA.....">W3schools</a></li>        
+<li><a class="dropdown-item" href="https://www.w3schools.com" target="_blank" title="HTML, CSS, JAVASCRIPT, SQL,  JAVA.....">W3schools</a></li> 
+<li><a class="dropdown-item" href="https://mega.nz/folder/snRDRbKD#NMPf8a3Bms_lNJHZRWqFrg" target="_blank">Andrew Tate Courses</a></li>       
 		   <li><a class="dropdown-item" href="https://www.discudemy.com/category/ethical-hacking" target="_blank">Free Udemy Courses</a></li>
 			<li><hr class="dropdown-divider"></li>
 			<li><a class="dropdown-item" href="https://hacksnation.com/t/courses" target="_blank" >Free Courses 01</a></li>
