--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -193,7 +193,12 @@
 	   <a class="dropdown-item" href="https://www.turbosquid.com" target="_blank">TurboSquid</a>
 	   <a class="dropdown-item" href="https://3dsky.org" target="_blank">3Dsky</a>
 	   <a class="dropdown-item" href="https://free3d.com" target="_blank">Free3d</a>
-      </div>
+	   <a class="dropdown-item disabled" href="#" aria-disabled="true"><mark style="background-color: yellow; color: grey;"><b>Archi E-Books</b></mark></a>
+      <a class="dropdown-item" href="./pdf/neufert-ar.pdf" title="بيانات المهندسين المعماريين، والمعروفة أيضًا باسم نيوفرت، هي كتاب مرجعي للمتطلبات المكانية في تصميم المباني وتخطيط الموقع" target="_blank">Ernst Neufert <span class="badge text-bg-info">النسخة العربية</a>
+	  <a class="dropdown-item" href="./pdf/neufert-en.pdf" title="Architects' Data, also simply known as the Neufert, is a reference book for spatial requirements in building design and site planning. " target="_blank">Ernst Neufert <span class="badge text-bg-primary">النسخة الانجليزية</a>
+	  <a class="dropdown-item" href="./pdf/neufert-fr.pdf" title="Architects' Data, également simplement connu sous le nom de Neufert, est un ouvrage de référence sur les exigences spatiales dans la conception des bâtiments et la planification des sites. " target="_blank">Ernst Neufert <span class="badge text-bg-danger">النسخة الفرنسية</a>
+	  <a class="dropdown-item" href="./pdf/The_Architects_Studio_Companion.pdf" title="The Architect’s Studio Companion is a robust, user friendly resource that keeps important information at your fingertips throughout the design process" target="_blank">The Architect's Studio Companion <span class="badge text-bg-primary">النسخة الانجليزية</a>
+	  </div>
 	  <div>
        <div class="dropdown-header"><b>Invoice</b></div>
        <a class="dropdown-item" href="https://www.zoho.com/invoice/?ireft=nhome&src=home1-dd" target="_blank">Zoho</a>
@@ -218,7 +223,8 @@
 	 <a class="dropdown-item" href="https://explorer.globe.engineer">Globe <span class="badge text-bg-success">Try It</a>
 	 <a class="dropdown-item" href="https://tutorai.me">Tutorai <span class="badge text-bg-success">Try It</a>
 	 <a class="dropdown-item" href="https://learn-anything.xyz">Learn Anything <span class="badge text-bg-success">Try It</a>
-	 <a class="dropdown-item" href="sigma.pdf" title="Ai Resources For You" target="_blank">Resources <span class="badge text-bg-danger">PDF</a>
+	 <a class="dropdown-item disabled" href="#" aria-disabled="true"><mark style="background-color: yellow; color: grey;"><b>AI Websites</b></mark></a>
+	 <a class="dropdown-item" href="./pdf/sigma.pdf" title="Ai Resources For You" target="_blank">Resources <span class="badge text-bg-danger">PDF</a>
     </div>
 	<div>
 	 <div class="dropdown-header"><b>Others</b></div>
