--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -163,6 +163,7 @@
 	   <a class="dropdown-item" href="https://www.craiyon.com" target="_blank">Craiyon</a>
 	   <a class="dropdown-item" href="https://hotpot.ai/art-generator" target="_blank">Hotpot</a>
 	   <a class="dropdown-item" href="https://leonardo.ai" target="_blank">Leonardo</a>
+	   <a class="dropdown-item" href="https://tensor.art" target="_blank">Tensor</a>
       </div>
       <div>
        <div class="dropdown-header"><b>Copywriting</b></div>
@@ -3331,6 +3332,7 @@ Includes basic shell scripting as part of the certification.
         <li class="nav-item dropup">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Learn With Certificate &#127891;</a>
           <ul class="dropdown-menu text-small">
+		   <li><a class="dropdown-item" href="https://academy.hubspot.com" title="Marketing, Sales, Services....." target="_blank">HubSpot Academy</a></li>
 		   <li><a class="dropdown-item" href="https://skillshop.docebosaas.com/pages/16/skillshop-home-page" title="Google Ads....." target="_blank">Google</a></li>
 		   <li><a class="dropdown-item" href="https://grow.google/intl/mena/courses-and-tools/" title="cybersecurity........." target="_blank">Google II</a></li>
 		   <li><a class="dropdown-item" href="https://certifications.facebookblueprint.com/student/catalog" title="Facebook Ads....." target="_blank">Meta</a></li>
