--- a/faq.html
+++ b/faq.html
@@ -88,9 +88,7 @@
                            </ul>
                         </div>
                         <div class="navbar__options">
-                           <div class="navbar__mobile-options d-none d-sm-flex">
-                               <a href="./mindmap/index.html" class="btn btn--secondary">Let's Learn</a>
-                           </div>
+                           
                            <button class="open-mobile-menu d-flex d-xl-none" aria-label="toggle mobile menu">
                               <i class="fa-light fa-bars-staggered"></i>
                            </button>
@@ -119,6 +117,13 @@
                      <a href="https://Instagram.com/sigmacode.agency" target="_blank" aria-label="share us on instagram">
                         <i class="fa-brands fa-instagram"></i>
                      </a>
+					 <a href="https://tiktok.com/@sigmacode.agency" target="_blank" aria-label="share us on tiktok">
+                        <i class="fa-brands fa-tiktok"></i>
+                     </a>
+					 <a href="https://www.linkedin.com/in/sigmacodeagency/" target="_blank" aria-label="share us on Linkedin">
+                        <i class="fa-brands fa-linkedin"></i>
+                     </a>
+                  </div>
                   </div>
                </nav>
             </div>
