--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -128,6 +128,7 @@
 	   <a class="dropdown-item" href="https://www.appcreator24.com" target="_blank">AppCreator24</a>
 	   <a class="dropdown-item" href="https://www.andromo.com" target="_blank">Andromo</a>
 	   <a class="dropdown-item" href="https://appyet.com" target="_blank">Appyet</a>
+	   <a class="dropdown-item" href="https://uizard.io" target="_blank">Uizard <span class="badge text-bg-primary">Ai Generate</a>
       </div>
 	  <div>
        <div class="dropdown-header"><b>Builder Site AI</b></div>
@@ -169,7 +170,9 @@
 	   <a class="dropdown-item" href="https://hotpot.ai/art-generator" target="_blank">Hotpot</a>
 	   <a class="dropdown-item" href="https://leonardo.ai" target="_blank">Leonardo</a>
 	   <a class="dropdown-item" href="https://tensor.art" target="_blank">Tensor</a>
-      </div>
+	   <a class="dropdown-item disabled" href="#" aria-disabled="true"><mark style="background-color: yellow; color: grey;"><b>AI Video Generate</b></mark></a>
+      <a class="dropdown-item" href="https://klingai.com" target="_blank">Kling Ai</a>
+	  </div>
       <div>
        <div class="dropdown-header"><b>Copywriting</b></div>
        <a class="dropdown-item" href="https://www.copy.ai" target="_blank">Copy</a>
