--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -365,7 +365,11 @@
     <div class="point-text">
 * Offensive Security Certified Professional (OSCP)</br>
 * Certified Ethical Hacker (CEH)</br>
-* GIAC Penetration Tester (GPEN)
+* GIAC Penetration Tester (GPEN)</br>
+</div>
+<div class="point-label"><b>Resources To Learn</b></div>
+<div class="point-text">
+* CyberSecurity Books Important Folder For You, please Download it <a href="https://www.mediafire.com/file/1svahx6ma4ye3c2/hacking-books-master.zip/file" title="CyberSecurity Books" target="_blank" style="text-decoration: none;"><mark style="color: red;"><b>Mediafire</b> - 256.64 MB</mark></a>
 </div>
   </div>
 
@@ -4116,7 +4120,8 @@ Includes basic shell scripting as part of the certification.
 		 <p><b>* لماذا يحب الرجال النساء الشريرات</b> <mark>شيري أرغوف</mark><a href="https://www.youtube.com/watch?v=BKAB5tD7-CI&pp=ygVO2YXZhNiu2LUg2YPYqtin2Kgg2YTZhdin2LDYpyDZitit2Kgg2KfZhNix2KzYp9mEINin2YTZhtiz2KfYoSDYp9mE2LTYsdmK2LHYp9iq" target="_blank" title="ملخصات" style="text-decoration: none;"> <b>الملخص</b> &#127911;</a></p>
 		 <p><b>* محاط بالحمقى</b> <mark>توماس إريكسون</mark><a href="https://www.youtube.com/watch?v=mxKdDTWwme4&pp=ygUp2YXZhNiu2LUg2YPYqtin2Kgg2YXYrdin2Lcg2KjYp9mE2K3ZhdmC2Yk%3D" target="_blank" title="ملخصات" style="text-decoration: none;"> <b>الملخص</b> &#127911;</a></p>
 		  <li><hr></li>
-        <p>قراءة هذه الكتب ستساعدك على تطوير مهاراتك وفهمك في العديد من المجالات المختلفة.</br> <a href="https://www.kotobati.com/book/top" target="_blank">Kotobati</a>, <a href="https://ultimatebooklist.com" target="_blank">UltimateBookList</a></p>
+        <p>قراءة هذه الكتب ستساعدك على تطوير مهاراتك وفهمك في العديد من المجالات المختلفة.</br> <a href="https://www.kotobati.com/book/top" target="_blank" style="text-decoration: none;"><mark><b>Kotobati</b></mark></a>, <a href="https://ultimatebooklist.com" target="_blank" style="text-decoration: none;"><mark><b>UltimateBookList</b></mark></a></p></br>
+		<p>هدا الرابط مهم لاصحاب امن المعلومات و الاختراق, الكتير من الكتب المهمة في ملف واحد.</br> <a href="https://www.mediafire.com/file/1svahx6ma4ye3c2/hacking-books-master.zip/file" title="CyberSecurity Books" target="_blank" style="text-decoration: none;"><mark style="color: red;"><b>Mediafire</b> - 256.64 MB</mark></a></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
