--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -4176,7 +4176,7 @@ Includes basic shell scripting as part of the certification.
 		    <li><a class="dropdown-item" href="https://techcampus.com/courses" target="_blank" title="CCNA-CCNP, Android, Front-End, Shell, Drak Web, Security+, Os, Ethical Hacking...">Techcampus</a></li>
 		  <li><a class="dropdown-item" href="https://www.m3aarf.com/certified/courses" target="_blank" title="Programming, En-ES, IT, Architecture...">M3aarf</a></li>
 		 <li><a class="dropdown-item" href="https://blockchaintrainingalliance.com/products/building-on-hedera-course" target="_blank" title="Web3, Blackchain, Token Service,....">BlockChain <span class="badge text-bg-dark">Access 1 Year</a></li>
- <li><a class="dropdown-item" href="https://training.linuxfoundation.org/resources/?_sft_content_type=free-course" target="_blank" title="Programming, En-ES, IT, Architecture...">Linux Foundation</a></li>		 
+ <li><a class="dropdown-item" href="https://training.linuxfoundation.org/resources/?_sft_content_type=free-course" target="_blank" title="">Linux Foundation</a></li>		 
 		  <li><hr class="dropdown-divider"></li>
 			<li><a class="dropdown-item" href="https://www.classcentral.com" target="_blank" title="Google, LinkedIn, Microsoft, Harvard...">Classcentral <span class="badge text-bg-dark">Very important! &#128142;</a></li>
             <li><a class="dropdown-item" href="https://digitaldefynd.com/free-courses/" target="_blank" title="Hp, Google, LinkedIn, Microsoft, Harvard...">Digitaldefynd <span class="badge text-bg-dark">Very important! &#128142;</a></li>
