--- a/mindmap/index.html
+++ b/mindmap/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+	<meta charset="utf-8">
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQT3GZJB0G"></script>
 <script>
@@ -244,11 +245,13 @@
 	 <a class="dropdown-item" href="https://www.ifixit.com" target="_blank">Ifix it <span class="badge text-bg-danger">Free Repair - try it</a>
 	 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 	 <div class="dropdown-header"><b>Free Links</b></div>
+	 <a class="dropdown-item" href="https://bit.ly/watikaty" target="_blank" >Watikaty <span class="badge text-bg-danger">خاص بالمغاربة فقط</a>
+	 <a class="dropdown-item" href="https://bit.ly/sigmacodedrive" target="_blank" >Google Drive For U</a>
 	 <a class="dropdown-item" href="https://bit.ly/ethicalhackerr" target="_blank">ChatGPT <span class="badge text-bg-dark">Black Hat!</a>
 	 <a class="dropdown-item" href="https://bit.ly/blackhacker" target="_blank">ChatGPT <span class="badge text-bg-danger">White Hat!</a>
-    <a class="dropdown-item" href="https://shorturl.at/lKZhT" target="_blank">Canva Pro <span class="badge text-bg-primary">Free</a>
-	<a class="dropdown-item" href="https://www.proinvitelinks.com/" target="_blank">Canva Pro <span class="badge text-bg-success">Free</a>
-	<a class="dropdown-item" href="https://difficult-crystal-c93.notion.site/Notion-8967c3c45b3642ffa8220ce81d4473f4" target="_blank">Notion Template <span class="badge text-bg-success">Free</a>
+     <a class="dropdown-item" href="https://shorturl.at/lKZhT" target="_blank">Canva Pro <span class="badge text-bg-primary">Free</a>
+	 <a class="dropdown-item" href="https://www.proinvitelinks.com/" target="_blank">Canva Pro <span class="badge text-bg-success">Free</a>
+	 <a class="dropdown-item" href="https://difficult-crystal-c93.notion.site/Notion-8967c3c45b3642ffa8220ce81d4473f4" target="_blank">Notion Template <span class="badge text-bg-success">Free</a>
 	</div>
 	</div>
    </li>
@@ -4254,16 +4257,12 @@ Includes basic shell scripting as part of the certification.
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item dropup">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Red Team&#128128;</a>
+          <a class="nav-link dropdown-toggle" href="#" title="اشياء مفيدة" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Red Team &#127894;</a>
           <ul class="dropdown-menu text-small">
+		  <li><h6 class="dropdown-header" style="text-align:center; font-family: 'Reem Kufi', serif; font-weight: 700;">هنااشياء مفيدة لتعلم</h6></li>
+		  <li><hr class="dropdown-divider"></li>
 		   <li><a class="dropdown-item" href="https://monkeytype.com" target="_blank">Monkey Type <span class="badge text-bg-success">Try It</a></li>
-		  <li><hr class="dropdown-divider"></li>
-		  <li><a class="dropdown-item" href="https://miro.com/app/board/uXjVM8JCyGs=/?share_link_id=323057149116" target="_blank">White Board</a></li>
-			<li><a class="dropdown-item" href="https://cybermap.kaspersky.com" target="_blank" >Real-Time Map Attackes</a></li>
-            <li><a class="dropdown-item" href="https://wokwi.com" target="_blank" >Simulating IoT (Internet of Things) Projects</a></li>
-		  <li><hr class="dropdown-divider"></li>
-		  <li><a class="dropdown-item" href="https://bit.ly/watikaty" target="_blank" >Watikaty <span class="badge text-bg-danger">خاص بالمغاربة فقط</a></li>
-		   <li><a class="dropdown-item" href="https://bit.ly/sigmacodedrive" target="_blank" >Google Drive For U</a></li>
+            <li><a class="dropdown-item" href="https://wokwi.com" target="_blank" >Simulating IoT (Internet of Things) Projects <span class="badge text-bg-success">Try It</a></li>
 			<li><hr class="dropdown-divider"></li>
 			<li><a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalCenteredScrollable" href="https://shorturl.at/PgHgP" target="_blank">Penetration Testing <span class="badge text-bg-dark">LABs&#128075;</a></li>
           </ul>
@@ -4271,32 +4270,49 @@ Includes basic shell scripting as part of the certification.
       </ul>
 	  <ul class="navbar-nav">
         <li class="nav-item dropup">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Learn With Certificate &#127891;</a>
+          <a class="nav-link dropdown-toggle" href="#" title="مواقع اجنبية" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Online School &#128365;</a>
           <ul class="dropdown-menu text-small">
-		   <li><a class="dropdown-item" href="https://www.knowledge4all.com/FutureSkills4All/overview" title="Future Skills 4 All Skills for Tomorrow.Opportunities for All." target="_blank">Knowledge 4 All <span class="badge text-bg-success">مؤسسة محمد بن راشد آل مكتوم</a></li>
+		   <li><h6 class="dropdown-header" style="text-align:center; font-family: 'Reem Kufi', serif; font-weight: 700;">مواقع اجنبية مع شهادات معتمدة</h6></li>
+		   <li><hr class="dropdown-divider"></li>
 		   <li><a class="dropdown-item" href="https://academy.hubspot.com" title="Marketing, Sales, Services....." target="_blank">HubSpot Academy</a></li>
 		   <li><a class="dropdown-item" href="https://skillshop.docebosaas.com/pages/16/skillshop-home-page" title="Google Ads....." target="_blank">Google</a></li>
 		   <li><a class="dropdown-item" href="https://grow.google/intl/mena/courses-and-tools/" title="cybersecurity........." target="_blank">Google II</a></li>
 		   <li><a class="dropdown-item" href="https://certifications.facebookblueprint.com/student/catalog" title="Facebook Ads....." target="_blank">Meta</a></li>
-		  <li><a class="dropdown-item" href="https://virtualcoursesnow.com/courses/" title="Personal Branding, Copywriting, Email Marketing, Digital Marketing, Sales, Virtual Assistant, Business, Android Flutter" target="_blank">VCN</a></li>
-            <li><a class="dropdown-item" href="https://www.coursat.org/index.php" target="_blank" title="Programming, Network, Data Base, Information Security, Os, Soft Skills ...">Coursat</a></li>
-			<li><a class="dropdown-item" href="https://teracourses.com/ar" target="_blank" title="English A1-A2, Spain A1, Programming, Network, Data Base, Information Security, Os, Soft Skills, Big Data, DevOps ...">Teracourses</a></li>
-            <li><a class="dropdown-item" href="https://www.nadrus.com/view-courses" target="_blank" title="A+, Virtual Machine, Programming, Network, Data Base, Information Security, Os, Soft Skills...">Nadrus</a></li>
-		   <li><a class="dropdown-item" href="https://www.edraak.org/explore/" target="_blank" title="A+, UI-UX, Interior Design, English Speaking, Soft Skills...">Edraak</a></li>
-		    <li><a class="dropdown-item" href="https://techcampus.com/courses" target="_blank" title="CCNA-CCNP, Android, Front-End, Shell, Drak Web, Security+, Os, Ethical Hacking...">Techcampus</a></li>
-		  <li><a class="dropdown-item" href="https://www.m3aarf.com/certified/courses" target="_blank" title="Programming, En-ES, IT, Architecture...">M3aarf</a></li>
-		 <li><a class="dropdown-item" href="https://blockchaintrainingalliance.com/products/building-on-hedera-course" target="_blank" title="Web3, Blackchain, Token Service,....">BlockChain <span class="badge text-bg-dark">Access 1 Year</a></li>
- <li><a class="dropdown-item" href="https://training.linuxfoundation.org/resources/?_sft_content_type=free-course" target="_blank" title="">Linux Foundation</a></li>		 
+		   <li><a class="dropdown-item" href="https://blockchaintrainingalliance.com/products/building-on-hedera-course" target="_blank" title="Web3, Blackchain, Token Service,....">BlockChain <span class="badge text-bg-dark">Access 1 Year</a></li>
+           <li><a class="dropdown-item" href="https://training.linuxfoundation.org/resources/?_sft_content_type=free-course" target="_blank" title="">Linux Foundation</a></li>		 
 		  <li><hr class="dropdown-divider"></li>
+		  <li><a class="dropdown-item" href="https://www.mooc.org" target="_blank" title="Developed by edX">Mooc <span class="badge text-bg-dark">Very important! &#128142;</a></li>
 			<li><a class="dropdown-item" href="https://www.classcentral.com" target="_blank" title="Google, LinkedIn, Microsoft, Harvard...">Classcentral <span class="badge text-bg-dark">Very important! &#128142;</a></li>
             <li><a class="dropdown-item" href="https://digitaldefynd.com/free-courses/" target="_blank" title="Hp, Google, LinkedIn, Microsoft, Harvard...">Digitaldefynd <span class="badge text-bg-dark">Very important! &#128142;</a></li>
 		 </ul>
         </li>
       </ul>
+	   <ul class="navbar-nav">
+        <li class="nav-item dropup">
+          <a class="nav-link dropdown-toggle" title="مواقع عربية" href="#" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Online School &#127985;</a>
+          <ul class="dropdown-menu text-small">
+		  <li><h6 class="dropdown-header" style="text-align:center; font-family: 'Reem Kufi', serif; font-weight: 700;">مواقع عربية مع شهادات معتمدة</h6></li>
+		   <li><hr class="dropdown-divider"></li>
+		   <li><a class="dropdown-item" href="https://www.coursat.org/index.php" target="_blank" title="Programming, Network, Data Base, Information Security, Os, Soft Skills ...">Coursat</a></li>
+		  <li><a class="dropdown-item" href="https://zadi.net" target="_blank" title="التفسير وعلوم القرآن, السيرة والتاريخ, العقيدة وأصول الدين...">Zadi <span class="badge text-bg-success">دروس اسلامية</a></li>
+		 <li><a class="dropdown-item" href="https://www.m3aarf.com/certified/courses" target="_blank" title="Programming, En-ES, IT, Architecture...">M3aarf</a></li>
+		 <li><a class="dropdown-item" href="https://www.edraak.org/explore/" target="_blank" title="A+, UI-UX, Interior Design, English Speaking, Soft Skills...">Edraak</a></li>
+		 <li><a class="dropdown-item" href="https://teracourses.com/ar" target="_blank" title="English A1-A2, Spain A1, Programming, Network, Data Base, Information Security, Os, Soft Skills, Big Data, DevOps ...">Teracourses</a></li>
+		 <li><a class="dropdown-item" href="https://virtualcoursesnow.com/courses/" title="Personal Branding, Copywriting, Email Marketing, Digital Marketing, Sales, Virtual Assistant, Business, Android Flutter" target="_blank">VCN</a></li>
+		 <li><a class="dropdown-item" href="https://www.for9a.com/courses" title="دورات مطلوبة في سوق العمل, التصوير وصناعة الأفلام, دورات التكنولوجيا والبرمجة......" target="_blank">For9a</a></li>
+		 <li><a class="dropdown-item" href="https://www.rwaq.org/courses" title="علوم الحاسب والرّقمنة, الدراسات الإسلامية, الاقتصاد والإدارة والتسويق......" target="_blank">Rwaq</a></li>
+		 <li><a class="dropdown-item" href="https://techcampus.com/courses" target="_blank" title="CCNA-CCNP, Android, Front-End, Shell, Drak Web, Security+, Os, Ethical Hacking...">Techcampus</a></li>
+		 <li><a class="dropdown-item" href="https://www.knowledge4all.com/FutureSkills4All/overview" title="Future Skills 4 All Skills for Tomorrow.Opportunities for All." target="_blank">Knowledge 4 All <span class="badge text-bg-success">مؤسسة محمد بن راشد آل مكتوم</a></li>
+		 </ul>
+        </li>
+      </ul>
+	 
 	  <ul class="navbar-nav">
         <li class="nav-item dropup">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Free Courses Links &#127874;</a>
+          <a class="nav-link dropdown-toggle" href="#" title="روابط مفيدة لك" data-bs-toggle="dropdown" aria-expanded="false">Resources <span class="badge text-bg-dark">Online School &#128369;</a>
           <ul class="dropdown-menu text-small">
+		  <li><h6 class="dropdown-header" style="text-align:center; font-family: 'Reem Kufi', serif; font-weight: 700;">روابط مفيدة لتعلم بدون شهادات</h6></li>
+		   <li><hr class="dropdown-divider"></li>
 <li><a class="dropdown-item" href="https://lmofidclub.com/courses" target="_blank" title="E-Commerce, Fb Ads, Google Ads .....">Lmofidclub</a></li> 
 <li><a class="dropdown-item" href="https://www.manhaj.ma" target="_blank" title="Moroccan Students, L'MATHS .....">Manhaj <span class="badge text-bg-dark">المقرر كامل</a></li>
 <li><a class="dropdown-item" href="https://mega.nz/folder/snRDRbKD#NMPf8a3Bms_lNJHZRWqFrg" target="_blank">Andrew Tate Courses</a></li>       
@@ -4310,6 +4326,7 @@ Includes basic shell scripting as part of the certification.
 			<li><a class="dropdown-item" href="https://www.kaggle.com/learn" target="_blank" >Kaggle</a></li>
 			<li><a class="dropdown-item" href="https://grafikart.fr/formations" target="_blank" >Grafikart</a></li>
 <li><hr class="dropdown-divider"></li> 
+		  <li><a class="dropdown-item" href="https://freelearninglist.org" target="_blank">Free Learning List <span class="badge text-bg-success">Try It</a></li>
 <li><a class="dropdown-item" href="https://www.discudemy.com/category/ethical-hacking" target="_blank">Free Udemy Courses</a></li>
 <li><a class="dropdown-item" href="https://hacksnation.com/t/course" target="_blank" >Free Courses 01</a></li>          
 		   <li><a class="dropdown-item" href="https://onehack.us" target="_blank" >Free Courses 02</a></li>
@@ -4318,8 +4335,7 @@ Includes basic shell scripting as part of the certification.
       </ul>
 	   <ul class="navbar-nav" >
         <li class="nav-item dropup" >
-          <a type="button" class="nav-link dropdown-toggle" data-bs-toggle="modal" data-bs-target="#book" aria-expanded="false">
-            Resources <span class="badge text-bg-dark">Books &#128218;</a>
+          <a type="button" title="هنا تجد اهم الكتب مع التلخيص" class="nav-link dropdown-toggle" data-bs-toggle="modal" data-bs-target="#book" aria-expanded="false">Resources <span class="badge text-bg-dark">Books &#128366;</a>
         </li>
       </ul>
     </div>
