--- a/about-us.html
+++ b/about-us.html
@@ -170,10 +170,10 @@
                <!-- ==== video modal start ==== -->
                <div class="video-modal">
                   <img src="assets/images/modal-bg.webp" alt="Image" class="modal-bg">
-                  <a class="video-frame video-btn" href="#" target="_blank">
-                     <img src="assets/images/video-frame-two.png" alt="Image">
-                     <i class="fa-sharp fa-solid fa-play"></i>
-                  </a>
+		       <video class="video-frame video-btn" width="400" controls poster="assets/images/video-frame-two.png">
+  <source src="mov_bbb.mp4" type="video/mp4">
+   <i class="fa-sharp fa-solid fa-play"></i>
+</video>
                </div>
                <!-- ==== / video modal end ==== -->
                <!-- ==== agency start ==== -->
