--- a/about-us.html
+++ b/about-us.html
@@ -171,8 +171,8 @@
                <div class="video-modal">
                   <img src="assets/images/modal-bg.webp" alt="Image" class="modal-bg">
 		       <video class="video-frame video-btn" width="400" controls poster="assets/images/video-frame-two.png">
-  <source src="mov_bbb.mp4" type="video/mp4">
-   <i class="fa-sharp fa-solid fa-play"></i>
+			        <i class="fa-sharp fa-solid fa-play"></i>
+  <source src="https://www.youtube.com/embed/BmYlDy89IpA?si=zcLaC38wPnPdGDdH" type="video/mp4">
 </video>
                </div>
                <!-- ==== / video modal end ==== -->
