--- a/about-us.html
+++ b/about-us.html
@@ -170,10 +170,11 @@
                <!-- ==== video modal start ==== -->
                <div class="video-modal">
                   <img src="assets/images/modal-bg.webp" alt="Image" class="modal-bg">
-		       <video class="video-frame video-btn" width="400" controls poster="assets/images/video-frame-two.png">
-			        <i class="fa-sharp fa-solid fa-play"></i>
+		       <video class="video-frame video-btn" width="100%" controls poster="assets/images/video-frame-two.png">
+			       
   <source src="https://www.youtube.com/embed/BmYlDy89IpA?si=zcLaC38wPnPdGDdH" type="video/mp4">
 </video>
+		        <i class="fa-sharp fa-solid fa-play"></i>
                </div>
                <!-- ==== / video modal end ==== -->
                <!-- ==== agency start ==== -->
