--- a/about-us.html
+++ b/about-us.html
@@ -170,11 +170,13 @@
                <!-- ==== video modal start ==== -->
                <div class="video-modal">
                   <img src="assets/images/modal-bg.webp" alt="Image" class="modal-bg">
-		       <video class="video-frame video-btn" width="100%" controls poster="assets/images/video-frame-two.png">
+		 
+		       <a class="video-frame video-btn" target="_blanck">
+			       <img src="assets/images/video-frame-two.png" alt="Image" class="modal-bg">
+<i class="fa-sharp fa-solid fa-play"></i>
 			       
-  <source src="https://www.youtube.com/embed/BmYlDy89IpA?si=zcLaC38wPnPdGDdH" type="video/mp4">
-</video>
-		        <i class="fa-sharp fa-solid fa-play"></i>
+		       </a>
+		        
                </div>
                <!-- ==== / video modal end ==== -->
                <!-- ==== agency start ==== -->
