--- a/about-us.html
+++ b/about-us.html
@@ -172,7 +172,7 @@
                   <img src="assets/images/modal-bg.webp" alt="Image" class="modal-bg">
 		 
 		       <a class="video-frame video-btn" target="_blanck">
-			       <img src="assets/images/video-frame-two.png" alt="Image" class="modal-bg">
+			       <img src="assets/images/video-frame-two.png">
 <i class="fa-sharp fa-solid fa-play"></i>
 			       
 		       </a>
