--- a/about-us.html
+++ b/about-us.html
@@ -167,16 +167,13 @@
                   </div>
                </section>
                <!-- ==== / banner end ==== -->
-               <!-- ==== video modal start ==== -->
+              <!-- ==== video modal start ==== -->
                <div class="video-modal">
                   <img src="assets/images/modal-bg.webp" alt="Image" class="modal-bg">
-		 
-		       <a class="video-frame video-btn" target="_blanck">
-			       <img src="assets/images/video-frame-two.png">
-<i class="fa-sharp fa-solid fa-play"></i>
-			       
-		       </a>
-		        
+                  <a class="video-frame video-btn" href="https://www.youtube.com/watch?v=BmYlDy89IpA" target="_blank">
+                     <img src="assets/images/video-frame-two.png" alt="Image">
+                     <i class="fa-sharp fa-solid fa-play"></i>
+                  </a>
                </div>
                <!-- ==== / video modal end ==== -->
                <!-- ==== agency start ==== -->
