--- a/index.html
+++ b/index.html
@@ -938,6 +938,10 @@
 				    <li>
                                  <a href="https://sigmacodeagency.github.io/POD" target="_blank">POD</a>
                               </li>
+				   </li>
+				    <li>
+                                 <a href="https://sigmacodeagency.github.io/Products" target="_blank">Products</a>
+                              </li>
 							  <li>
                                  <a href="./mindmap/index.html" target="_blank">Mind Map</a>
                               </li>
