--- a/index.html
+++ b/index.html
@@ -924,25 +924,21 @@
                         <div class="col-12 col-xl-6">
                            <ul class="justify-content-center justify-content-xl-end">
                               <li>
-                                 <a href="index.html">Home</a>
+                                 <a href="https://sigmacodeagency.github.io/keys">Keys</a>
                               </li>
                               <li>
-                                 <a href="about-us.html">About</a>
+                                 <a href="https://sigmacodeagency.github.io/Products">Templates</a>
                               </li>
                               <li>
-                                 <a href="faq.html">Faq</a>
+                                 <a href="https://sigmacodeagency.github.io/iptv">IpTv</a>
                               </li>
-                              <li>
-                                 <a href="contact-us.html">Contact</a>
-                              </li>
+                              
 				    <li>
                                  <a href="https://sigmacodeagency.github.io/POD" target="_blank">POD</a>
                               </li>
 				   </li>
-				    <li>
-                                 <a href="https://sigmacodeagency.github.io/Products" target="_blank">Products</a>
-                              </li>
-							  <li>
+				   
+				 <li>
                                  <a href="./mindmap/index.html" target="_blank">Mind Map</a>
                               </li>
                            </ul>
